JSAI/error/src/test/resources/scoping/v320.js

function add() {
	return arguments[0] + arguments[1];
}

var x = add(1,2,3);
print(x);
